syntax = "proto3";

package email;

option go_package = "github.com/tcfw/pkg/protos/email/pb";

enum RequestType {
	RECEIVE_EMAIL = 0;
}

message Request {
	string publicID = 1;
	RequestType type = 2;
	
	oneof Data {
		ReceiveEmail ReceiveEmail = 3;
	};
}

message Response {
	string error = 1;
}

message ReceiveEmail {
	string ForwardedFrom = 1;
	string EnvelopeFrom = 2;
	string EnvelopeTo = 3;
	bytes Envelope = 4;
};